# ContentEngine

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  Makefile  PRIVACY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.codex/: codex-os.manifest.json  verify.commands
.codex/bootstrap/: tests-docs.v1.json
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-ci.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  quality-gates.yml  release-desktop.yml  release.yml
docs/: PORTFOLIO-DISPOSITION.md
docs/adr/: 0001-export-contract-and-quality-gates.md
docs/release/: desktop-release.md
openapi/: openapi.generated.json
scripts/: clean-heavy.sh  clean-local.sh  dev-lean.sh
scripts/docs/: check-contract.mjs  generate-contract.mjs
scripts/git/: propose-commit-message.mjs
scripts/perf/: bundle-report.mjs  compare-metric.mjs  measure-build-time.mjs  memory-smoke.mjs  summarize.mjs
scripts/release/: collect-artifacts.sh  verify-version-sync.mjs
src/: test-setup.ts
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  logging.rs
src-tauri/src/commands/: export.rs  repurpose.rs
src-tauri/src/models/: error.rs
src-tauri/src/services/: markdown_export.rs  mod.rs  pdf_export.rs  usage_tracker.rs
src-tauri/tests/: integration_tests.rs  utils.rs
src-tauri/tests/fixtures/: claude_responses.json
src/hooks/: useBrandVoice.ts  useUsage.ts
src/lib/: constants.ts  tauriApi.test.ts  (+3 more)
(+29 files in other folders)
