[package]
name = "content-engine"
version = "0.1.0"
description = "Content Repurposing Engine"
authors = ["you"]
edition = "2021"

[lib]
name = "content_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.25"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
printpdf = "0.9"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
